@@ -1,5 +1,14 @@
 2008-06-10  Carlos Garnacho  <carlos@imendio.com>
 
+	* src/tracker-indexer/tracker-indexer-db.[ch]
+	(tracker_db_set_metadata): Add argument to pass the parsed string for
+	a value. Store data in the correct tables depending on the field data
+	type.
+	* src/tracker-indexer/tracker-indexer.c (index_metadata_foreach): pass
+	the parsed value string to tracker_db_set_metadata().
+
+2008-06-10  Carlos Garnacho  <carlos@imendio.com>
+
 	* src/libtracker-common/tracker-parser.c
 	(tracker_parser_text_to_string): Return a stripped string.
 
